Overlay fades in and out on open and close

--- a/scss/swipebox.scss
+++ b/scss/swipebox.scss
@@ -33,6 +33,7 @@ html.swipebox-html.swipebox-touch {
 	z-index: 99999!important;
 	overflow: hidden;
 	user-select: none;
+  	display: none;	
 }
 
 #swipebox-container{
