--- a/src/css/swipebox.css
+++ b/src/css/swipebox.css
@@ -19,6 +19,7 @@ html.swipebox-html.swipebox-touch {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  display: none;
 }
 
 #swipebox-container {
@@ -29,7 +30,9 @@ html.swipebox-html.swipebox-touch {
 
 #swipebox-slider {
   -webkit-transition: -webkit-transform 0.4s ease;
-          transition: transform 0.4s ease;
+  transition: -webkit-transform 0.4s ease;
+  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, -webkit-transform 0.4s ease;
   height: 100%;
   left: 0;
   top: 0;
@@ -71,8 +74,7 @@ html.swipebox-html.swipebox-touch {
   max-height: 100%;
   width: 100%;
   padding: 5%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 #swipebox-slider .slide .swipebox-video-container .swipebox-video {
   width: 100%;
@@ -95,7 +97,7 @@ html.swipebox-html.swipebox-touch {
 #swipebox-bottom-bar,
 #swipebox-top-bar {
   -webkit-transition: 0.5s;
-          transition: 0.5s;
+  transition: 0.5s;
   position: absolute;
   left: 0;
   z-index: 999;
@@ -185,7 +187,7 @@ html.swipebox-html.swipebox-touch {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   -webkit-transition: all .3s ease;
-          transition: all .3s ease;
+  transition: all .3s ease;
   content: ' ';
   position: absolute;
   z-index: 999;
@@ -196,13 +198,11 @@ html.swipebox-html.swipebox-touch {
 }
 .swipebox-touch #swipebox-container:before {
   left: 0;
-  -webkit-box-shadow: inset 10px 0px 10px -8px #656565;
-          box-shadow: inset 10px 0px 10px -8px #656565;
+  box-shadow: inset 10px 0px 10px -8px #656565;
 }
 .swipebox-touch #swipebox-container:after {
   right: 0;
-  -webkit-box-shadow: inset -10px 0px 10px -8px #656565;
-          box-shadow: inset -10px 0px 10px -8px #656565;
+  box-shadow: inset -10px 0px 10px -8px #656565;
 }
 .swipebox-touch #swipebox-overlay.leftSpringTouch #swipebox-container:before {
   opacity: 1;
@@ -215,11 +215,9 @@ html.swipebox-html.swipebox-touch {
   0% {
     left: 0;
   }
-
   50% {
     left: -30px;
   }
-
   100% {
     left: 0;
   }
@@ -229,11 +227,9 @@ html.swipebox-html.swipebox-touch {
   0% {
     left: 0;
   }
-
   50% {
     left: -30px;
   }
-
   100% {
     left: 0;
   }
@@ -242,11 +238,9 @@ html.swipebox-html.swipebox-touch {
   0% {
     left: 0;
   }
-
   50% {
     left: 30px;
   }
-
   100% {
     left: 0;
   }
@@ -255,11 +249,9 @@ html.swipebox-html.swipebox-touch {
   0% {
     left: 0;
   }
-
   50% {
     left: 30px;
   }
-
   100% {
     left: 0;
   }
